--- a/quiz-simulation.ipynb
+++ b/quiz-simulation.ipynb
@@ -24,10 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1452 <class 'int'>\n",
+      "11.23 <class 'float'>\n",
+      "(1+2j) <class 'complex'>\n",
+      "True <class 'bool'>\n",
+      "w3resource <class 'str'>\n",
+      "[5, 12] <class 'list'>\n",
+      "[1 2 3] <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "datalist = [1452, 11.23, 1+2j, True, 'w3resource', [5, 12], np.array([1,2,3])]\n",
+    "for i in range(len(datalist)):\n",
+    "    print(datalist[i],type(datalist[i]))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,6 +65,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1=0\n",
+    "x2=1\n",
+    "print(x1)\n",
+    "print(x2)\n",
+    "for i in range(8):\n",
+    "    x3=x1+x2\n",
+    "    print(x3)\n",
+    "    x1=x2\n",
+    "    x2=x3\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -54,9 +109,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 ('multilayer')",
+   "display_name": "conda_amazonei_mxnet_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_amazonei_mxnet_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -68,9 +123,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.6.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "11838f79d2aaadbfa3a2adfaf35bacdebdb4e8d9b63957ddf298964812544a76"
@@ -78,5 +132,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
