--- a/quiz-simulation.ipynb
+++ b/quiz-simulation.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -86,13 +86,13 @@
     }
    ],
    "source": [
-    "x1=0\n",
-    "x2=1\n",
-    "print(x1)\n",
-    "print(x2)\n",
+    "x1,x2=0,1\n",
+    "\n",
+    "\n",
     "for i in range(8):\n",
-    "    x3=x1+x2\n",
-    "    print(x3)\n",
+    "    \n",
+    "    print(x1)\n",
+    "    temp=x1+x2\n",
     "    x1=x2\n",
     "    x2=x3\n",
     "\n",
